Fixed some spacing issues

--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,11 @@ td {
     }
 }
 
+@media (max-width: 600px) {
+    body {
+        margin-top: 20px;
+    }
+}
 
 @media(max-width: 375px) {
 
